@@ -1,10 +1,9 @@
 #!/usr/bin/env bash
 
-# Set Spark environment variables for your site in this file. Some useful
+# Set Shark environment variables for your site in this file. Some useful
 # variables to set are:
 #
-# - MESOS_HOME, to point to your Mesos installation. If not specified, Shark
-#   will run in local mode.
+# - MESOS_NATIVE_LIBRARY, to point to your Mesos native library (libmesos.so)
 # - SCALA_HOME, to point to your Scala installation.
 # - HIVE_HOME, to point to the Hive binary distribution.
 # - SPARK_CLASSPATH, to add elements to Spark's classpath.
@@ -22,20 +21,18 @@ export SCALA_VERSION=2.9.1
 export SPARK_MEM=3g
 
 # Java options
+# On EC2, change the local.dir to /mnt/tmp
 export SPARK_JAVA_OPTS="-Dspark.local.dir=/tmp -Dspark.kryoserializer.buffer.mb=10  -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCTimeStamps"
 
 # HIVE_HOME, point to Hive binary distribution
 export HIVE_HOME=""
 
-# This is only needed for development (SBT test uses this).
-# export HIVE_DEV_HOME=""
+# The following is only needed for development (SBT test uses this).
+#export HIVE_DEV_HOME=""
+#export HIVE_HOME=$HIVE_DEV_HOME/build/dist
 
-# Default EC2 settings for the Mesos AMI.
-# export SCALA_HOME=/root/scala-$SCALA_VERSION.final
-# export MESOS_HOME=/root/mesos
-# export HIVE_DEV_HOME=/root/hive
-# export HIVE_HOME=$HIVE_DEV_HOME/build/dist
-# export MASTER=`cat /root/mesos-ec2/cluster-url`
-# export HADOOP_HOME=/root/ephemeral-hdfs
-# export SPARK_JAVA_OPTS="-Dspark.local.dir=/mnt/tmp -Dspark.kryoserializer.buffer.mb=10  -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCTimeStamps"
-
+# Set these options when running through spark-ec2 scripts
+#export MASTER=`cat /root/mesos-ec2/cluster-url`
+#export HADOOP_HOME=/root/ephemeral-hdfs
+#export MESOS_NATIVE_LIBRARY=/usr/local/lib/libmesos.so
+#export SCALA_HOME=/root/scala-$SCALA_VERSION.final
